--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^5.15.11",
     "@mui/material": "^5.15.11",
     "@reduxjs/toolkit": "^2.2.1",
+    "axios": "^1.6.7",
     "formik": "^2.4.5",
     "next": "14.1.0",
     "react": "^18",
